create teachers page

--- a/pages/teachers/teachers.html
+++ b/pages/teachers/teachers.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/global.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Преподаватели</title>
 </head>
 <body>
@@ -29,6 +30,129 @@
             </div>
         </div>
     </header>
-
+    <section class="top">
+        <div class="container">
+            <div class="top__inner">
+                <div class="top__img">
+                    <img src="./assets/img/top-img/top-img.png" alt="">
+                </div>
+                <div class="top__content">
+                    <h1 class="top__title title">
+                        Любимые преподаватели
+                    </h1>
+                    <p class="top__text text">
+                        Легко найдем по прозвищу или предмету
+                    </p>
+                    <div class="search">
+                        <input class="search__input" type="text" placeholder="Кто интересует?">
+                        <button class="search__btn">
+                            <img src="../../assets/icon/top-icon/search-icon.svg" alt="">
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="teachers">
+        <div class="container">
+            <div class="teachers__wrapper wrapper">
+                <ul class="teachers__list">
+                    <li class="teachers__item">
+                        <div class="teachers__item-header">
+                            <div class="teacher__info">
+                                <img src="./assets/img/teacher-img/teacher-ava.png" alt="">
+                                <div class="teacher__name">
+                                    <span class="name">Пастух Павел Михайлович</span>
+                                    <span class="name__discipline">Физкультура</span>
+                                </div>
+                            </div>
+                            <div class="teacher__coolness">
+                                <img src="./assets/icon/coolness-icon.svg" alt="">
+                                <span>1/5</span>
+                            </div>
+                        </div>
+                        <ul class="teacher__benefits-list">
+                            <li class="teacher__benefits-item">
+                                <img src="./assets/icon/mail-icon.svg" alt="">
+                                <span>p.pastuh@kasict.ru</span>
+                            </li>
+                            <li class="teacher__benefits-item">
+                                <img src="./assets/icon/qualification-icon.svg" alt="">
+                                <span>Высшая квалификация</span>
+                            </li>
+                            <li class="teacher__benefits-item">
+                                <img src="./assets/icon/document-icon.svg" alt="">
+                                <span>
+                                    2021г., ООО "Центр инновационного образования и воспитания" повышение квалификации по программе "Навыки оказания первой помощи в образовательных организациях", 36ч.
+                                </span>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="teachers__item">
+                        <div class="teachers__item-header">
+                            <div class="teacher__info">
+                                <img src="./assets/img/teacher-img/teacher-ava.png" alt="">
+                                <div class="teacher__name">
+                                    <span class="name">Пастух Павел Михайлович</span>
+                                    <span class="name__discipline">Физкультура</span>
+                                </div>
+                            </div>
+                            <div class="teacher__coolness">
+                                <img src="./assets/icon/coolness-icon.svg" alt="">
+                                <span>1/5</span>
+                            </div>
+                        </div>
+                        <ul class="teacher__benefits-list">
+                            <li class="teacher__benefits-item">
+                                <img src="./assets/icon/mail-icon.svg" alt="">
+                                <span>p.pastuh@kasict.ru</span>
+                            </li>
+                            <li class="teacher__benefits-item">
+                                <img src="./assets/icon/qualification-icon.svg" alt="">
+                                <span>Высшая квалификация</span>
+                            </li>
+                            <li class="teacher__benefits-item">
+                                <img src="./assets/icon/document-icon.svg" alt="">
+                                <span>
+                                    2021г., ООО "Центр инновационного образования и воспитания" повышение квалификации по программе "Навыки оказания первой помощи в образовательных организациях", 36ч.
+                                </span>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="teachers__item">
+                        <div class="teachers__item-header">
+                            <div class="teacher__info">
+                                <img src="./assets/img/teacher-img/teacher-ava.png" alt="">
+                                <div class="teacher__name">
+                                    <span class="name">Пастух Павел Михайлович</span>
+                                    <span class="name__discipline">Физкультура</span>
+                                </div>
+                            </div>
+                            <div class="teacher__coolness">
+                                <img src="./assets/icon/coolness-icon.svg" alt="">
+                                <span>1/5</span>
+                            </div>
+                        </div>
+                        <ul class="teacher__benefits-list">
+                            <li class="teacher__benefits-item">
+                                <img src="./assets/icon/mail-icon.svg" alt="">
+                                <span>p.pastuh@kasict.ru</span>
+                            </li>
+                            <li class="teacher__benefits-item">
+                                <img src="./assets/icon/qualification-icon.svg" alt="">
+                                <span>Высшая квалификация</span>
+                            </li>
+                            <li class="teacher__benefits-item">
+                                <img src="./assets/icon/document-icon.svg" alt="">
+                                <span>
+                                    2021г., ООО "Центр инновационного образования и воспитания" повышение квалификации по программе "Навыки оказания первой помощи в образовательных организациях", 36ч.
+                                </span>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
