--- a/pages/students/students.html
+++ b/pages/students/students.html
@@ -9,28 +9,87 @@
 </head>
 <body>
     <header class="header">
-    <div class="container">
-        <div class="header__inner">
-            <a href="../../index.html" class="header__right__part">
-                <img src="../../assets/icon/header-icon/header-logo-icon.svg" alt="">
-            </a>
-            <nav class="header__nav">
-                <a href="../../index.html" class="nav__link">Основная страница</a>
-                <a href="../groups/groups.html" class="nav__link">Группы</a>
-                <a href="../teachers/teachers.html" class="nav__link">Преподаватели</a>
-                <a href="../students/students.html" class="nav__link active">Студенты</a>
-            </nav>
-            <div class="header__left__part">
-                <!--                    <img src="./assets/icon/header-icon/change-theme.svg" alt="">-->
-                <a class="header__btn__auth btn-primary btn">
-                    Авторизация
+        <div class="container">
+            <div class="header__inner">
+                <a href="../../index.html" class="header__right__part">
+                    <img src="../../assets/icon/header-icon/header-logo-icon.svg" alt="">
                 </a>
+                <nav class="header__nav">
+                    <a href="../../index.html" class="nav__link">Основная страница</a>
+                    <a href="../groups/groups.html" class="nav__link">Группы</a>
+                    <a href="../teachers/teachers.html" class="nav__link">Преподаватели</a>
+                    <a href="../students/students.html" class="nav__link active">Студенты</a>
+                </nav>
+                <div class="header__left__part">
+                    <!--                    <img src="./assets/icon/header-icon/change-theme.svg" alt="">-->
+                    <a class="header__btn__auth btn-primary btn">
+                        Авторизация
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
     </header>
-<!--    <footer class="map">-->
-<!--        <script type="text/javascript" charset="utf-8" defer src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Adac498dbaae8d42705970be9ec5f1490d35fff7aaa8197f1fa4e45fa57b8ad1a&amp;width=1280&amp;height=539&amp;lang=ru_RU&amp;scroll=true"></script>-->
-<!--    </footer>-->
+    <section class="top">
+        <div class="container">
+            <div class="top__inner">
+                <div class="top__img">
+                    <img src="" alt="">
+                </div>
+                <div class="top__content">
+                    <h1 class="top__title title">
+                        Исочки
+                    </h1>
+                    <p class="top__text text">
+                        Легко найдем по прозвищу или предмету
+                    </p>
+                    <div class="search">
+                        <input class="search__input" type="text" placeholder="Кто интересует?">
+                        <button class="search__btn">
+                            <img src="../../assets/icon/top-icon/search-icon.svg" alt="">
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="students">
+        <div class="container">
+            <div class="students__wrapper wrapper">
+                <ul class="students__list">
+                    <li class="students__item">
+                        <div class="students__item-header">
+                            <div class="student__info">
+                                <img src="./assets/img/teacher-img/teacher-ava.png" alt="">
+                                <div class="student__name">
+                                    <span class="name">Пастух Павел Михайлович</span>
+                                    <span class="name__discipline">Физкультура</span>
+                                </div>
+                            </div>
+                            <div class="student__coolness">
+                                <img src="./assets/icon/coolness-icon.svg" alt="">
+                                <span>1/5</span>
+                            </div>
+                        </div>
+                        <ul class="students__benefits-list">
+                            <li class="teacher__benefits-item">
+                                <img src="./assets/icon/mail-icon.svg" alt="">
+                                <span>p.pastuh@kasict.ru</span>
+                            </li>
+                            <li class="students__benefits-item">
+                                <img src="./assets/icon/qualification-icon.svg" alt="">
+                                <span>Высшая квалификация</span>
+                            </li>
+                            <li class="students__benefits-item">
+                                <img src="./assets/icon/document-icon.svg" alt="">
+                                <span>
+                                    2021г., ООО "Центр инновационного образования и воспитания" повышение квалификации по программе "Навыки оказания первой помощи в образовательных организациях", 36ч.
+                                </span>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
