--- a/pages/students/students.html
+++ b/pages/students/students.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/global.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Студенты</title>
 </head>
 <body>
@@ -33,7 +34,7 @@
         <div class="container">
             <div class="top__inner">
                 <div class="top__img">
-                    <img src="" alt="">
+                    <img src="./assets/img/top-img/top-img.png" alt="">
                 </div>
                 <div class="top__content">
                     <h1 class="top__title title">
@@ -59,30 +60,34 @@
                     <li class="students__item">
                         <div class="students__item-header">
                             <div class="student__info">
-                                <img src="./assets/img/teacher-img/teacher-ava.png" alt="">
+                                <img src="./assets/img/student-img/student-ava.png" alt="">
                                 <div class="student__name">
-                                    <span class="name">Пастух Павел Михайлович</span>
-                                    <span class="name__discipline">Физкультура</span>
+                                    <span class="name">Гаак Роман Кто-то</span>
+                                    <span class="name__position">Зам старосты</span>
                                 </div>
                             </div>
-                            <div class="student__coolness">
-                                <img src="./assets/icon/coolness-icon.svg" alt="">
-                                <span>1/5</span>
+                            <div class="student__links">
+                                <a href="#">
+                                    <img src="./assets/icon/github-icon.svg" alt="">
+                                </a>
+                                <a href="#">
+                                    <img src="./assets/icon/tg-icon.svg" alt="">
+                                </a>
                             </div>
                         </div>
                         <ul class="students__benefits-list">
-                            <li class="teacher__benefits-item">
-                                <img src="./assets/icon/mail-icon.svg" alt="">
-                                <span>p.pastuh@kasict.ru</span>
+                            <li class="students__benefits-item">
+                                <img src="./assets/icon/vk-icon.svg" alt="">
+                                <span>Гаак Роман</span>
                             </li>
                             <li class="students__benefits-item">
-                                <img src="./assets/icon/qualification-icon.svg" alt="">
-                                <span>Высшая квалификация</span>
+                                <img src="./assets/icon/skills-icon.svg" alt="">
+                                <span>C#, blender</span>
                             </li>
                             <li class="students__benefits-item">
-                                <img src="./assets/icon/document-icon.svg" alt="">
+                                <img src="./assets/icon/description-icon.svg" alt="">
                                 <span>
-                                    2021г., ООО "Центр инновационного образования и воспитания" повышение квалификации по программе "Навыки оказания первой помощи в образовательных организациях", 36ч.
+                                    Основное направление, которое мне больше всего нравится, так это 3д-моделирование, в этом направлении обучаюсь уже более года
                                 </span>
                             </li>
                         </ul>
