--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <div class="news__item-body">
                             <img src="./assets/img/news-img/1.png" alt="">
                             <span class="news__name-group">IS19-1</span>
-                            <p class="news__title">ШОК</p>
+                            <p class="news__body-title">ШОК</p>
                             <span class="news__description">Съел капусту</span>
                             <span class="news__date">18.01.23</span>
                         </div>
