create base config gulp

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ВД</title>
-    <link rel="stylesheet" href="./css/global.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="csslobal.css">
+    <link rel="stylesheet" href="csstyle.css">
     <script src="js/modalContacts.js" defer></script>
 </head>
 <body>
@@ -14,13 +14,13 @@
         <div class="container">
             <div class="header__inner">
                 <a href="index.html" class="header__right__part">
-                    <img src="./assets/icon/header-icon/header-logo-icon.svg" alt="">
+                    <img src="assetscon/header-icon/header-logo-icon.svg" alt="">
                 </a>
                 <nav class="header__nav">
                     <a href="index.html" class="nav__link active">Основная страница</a>
-                    <a href="./pages/groups/groups.html" class="nav__link">Группы</a>
-                    <a href="./pages/teachers/teachers.html" class="nav__link">Преподаватели</a>
-                    <a href="./pages/students/students.html" class="nav__link">Студенты</a>
+                    <a href="pagesroups/groups.html" class="nav__link">Группы</a>
+                    <a href="pageseachers/teachers.html" class="nav__link">Преподаватели</a>
+                    <a href="pagestudents/students.html" class="nav__link">Студенты</a>
                 </nav>
                 <div class="header__left__part">
 <!--                    <img src="./assets/icon/header-icon/change-theme.svg" alt="">-->
@@ -35,7 +35,7 @@
         <div class="container">
             <div class="top__inner">
                 <div class="top__left__part">
-                    <img src="./assets/img/top-img/top-img.svg" alt="">
+                    <img src="assetsmg/top-img/top-img.svg" alt="">
                 </div>
                 <div class="top__right__part">
                     <div class="content">
@@ -48,7 +48,7 @@
                         <div class="search">
                             <input class="search__input" type="text" placeholder="Что найти?">
                             <button class="search__btn">
-                                <img src="./assets/icon/top-icon/search-icon.svg" alt="">
+                                <img src="assetscon/top-icon/search-icon.svg" alt="">
                             </button>
                         </div>
                     </div>
@@ -70,14 +70,14 @@
                 <ul class="news__list">
                     <li class="news__item">
                         <div class="news__item-body">
-                            <img src="./assets/img/news-img/1.png" alt="">
+                            <img src="assetsmg/news-img/1.png" alt="">
                             <span class="news__name-group">IS19-1</span>
                             <p class="news__body-title">ШОК</p>
                             <span class="news__description">Съел капусту</span>
                             <span class="news__date">18.01.23</span>
                         </div>
                         <div class="news__item__footer">
-                            <img src="./assets/img/news-img/man-1.png" alt="">
+                            <img src="assetsmg/news-img/man-1.png" alt="">
                             <div class="news__item__footer-description">
                                 <span class="news__name-user">Palich</span>
                                 <span>Я люблю котят</span>
@@ -86,14 +86,14 @@
                     </li>
                     <li class="news__item">
                         <div class="news__item-body">
-                            <img src="./assets/img/news-img/2.png">
+                            <img src="assetsmg/news-img/2.png">
                             <span class="news__name-group">IS19-1</span>
                             <p class="news__title">Разбил телефон</p>
                             <span class="news__description">Разбил телефон об машину</span>
                             <span class="news__date">17.01.23</span>
                         </div>
                         <div class="news__item__footer">
-                            <img src="./assets/img/news-img/man-2.png" alt="">
+                            <img src="assetsmg/news-img/man-2.png" alt="">
                             <div class="news__item__footer-description">
                                 <span class="news__name-user">Popcov</span>
                                 <span>Опять болею</span>
@@ -102,14 +102,14 @@
                     </li>
                     <li class="news__item">
                         <div class="news__item-body">
-                            <img src="./assets/img/news-img/3.png">
+                            <img src="assetsmg/news-img/3.png">
                             <span class="news__name-group">IS19-1</span>
                             <p class="news__title">Сжог испарик</p>
                             <span class="news__description">Я лох</span>
                             <span class="news__date">15.01.23</span>
                         </div>
                         <div class="news__item__footer">
-                            <img src="./assets/img/news-img/man-3.png" alt="">
+                            <img src="assetsmg/news-img/man-3.png" alt="">
                             <div class="news__item__footer-description">
                                 <span class="news__name-user">Gaak</span>
                                 <span>Я ко 2 хожу</span>
@@ -118,14 +118,14 @@
                     </li>
                     <li class="news__item">
                         <div class="news__item-body">
-                            <img src="./assets/img/news-img/4.png">
+                            <img src="assetsmg/news-img/4.png">
                             <span class="news__name-group">IS19-1</span>
                             <p class="news__title">Пришел на пары</p>
                             <span class="news__description">ну я с качалки</span>
                             <span class="news__date">infinity</span>
                         </div>
                         <div class="news__item__footer">
-                            <img src="./assets/img/news-img/man-4.png" alt="">
+                            <img src="assetsmg/news-img/man-4.png" alt="">
                             <div class="news__item__footer-description">
                                 <span class="news__name-user">Nelubin</span>
                                 <span>Дома сижу</span>
@@ -180,12 +180,12 @@
                     <li class="professions__item">
                         <div class="professions__item-header">
                             <div class="profession__logo">
-                                <img src="./assets/icon/professions/star-icon.svg" alt="">
+                                <img src="assetscon/professions/star-icon.svg" alt="">
                             </div>
                             <div class="profession__name">
                                 <h6 class="profession__title">Дизайн</h6>
                                 <span class="profession__salary">
-                                    <img src="./assets/icon/professions/dollar.svg" alt="">
+                                    <img src="assetscon/professions/dollar.svg" alt="">
                                     50
                                 </span>
                             </div>
@@ -204,14 +204,14 @@
                     <li class="professions__item">
                         <div class="professions__item-header">
                             <div class="profession__logo">
-                                <img src="./assets/icon/professions/key-icon.svg" alt="">
+                                <img src="assetscon/professions/key-icon.svg" alt="">
                             </div>
                             <div class="profession__name">
                                 <h6 class="profession__title">
                                     Информационные системы
                                 </h6>
                                 <span class="profession__salary">
-                                    <img src="./assets/icon/professions/dollar.svg" alt="">
+                                    <img src="assetscon/professions/dollar.svg" alt="">
                                     75
                                 </span>
                             </div>
@@ -233,12 +233,12 @@
                     <li class="professions__item">
                         <div class="professions__item-header">
                             <div class="profession__logo">
-                                <img src="./assets/icon/professions/crown-icon.svg" alt="">
+                                <img src="assetscon/professions/crown-icon.svg" alt="">
                             </div>
                             <div class="profession__name">
                                 <h6 class="profession__title">Архитектура</h6>
                                 <span class="profession__salary">
-                                    <img src="./assets/icon/professions/dollar.svg" alt="">
+                                    <img src="assetscon/professions/dollar.svg" alt="">
                                     25
                                 </span>
                             </div>
@@ -268,24 +268,24 @@
         <div class="contacts__modal-body">
             <div class="contacts__data">
                 <div class="contacts__logo">
-                    <img src="./assets/icon/header-icon/header-logo-icon.svg" alt="">
+                    <img src="assetscon/header-icon/header-logo-icon.svg" alt="">
                 </div>
                 <h6 class="contacts__title">Контактные данные:</h6>
                 <ul class="contacts__list">
                     <li class="contacts__item">
-                        <img src="./assets/icon/modal-icons/modal-contacts/email-icon.svg" alt="">
+                        <img src="assetscon/modal-icons/modal-contacts/email-icon.svg" alt="">
                         <span>kasict@kasict.ru</span>
                     </li>
                     <li class="contacts__item">
-                        <img src="./assets/icon/modal-icons/modal-contacts/phone-icon.svg" alt="">
+                        <img src="assetscon/modal-icons/modal-contacts/phone-icon.svg" alt="">
                         <span>+79009001212</span>
                     </li>
                     <li class="contacts__item">
-                        <img src="./assets/icon/modal-icons/modal-contacts/map-coord.svg" alt="">
+                        <img src="assetscon/modal-icons/modal-contacts/map-coord.svg" alt="">
                         <span>Ордженикидзе 15</span>
                     </li>
                     <li class="contacts__item">
-                        <img src="./assets/icon/modal-icons/modal-contacts/map-coord.svg" alt="">
+                        <img src="assetscon/modal-icons/modal-contacts/map-coord.svg" alt="">
                         <span>Мичурина 4</span>
                     </li>
                 </ul>
