--- a/src/pages/students/students.html
+++ b/src/pages/students/students.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../css/global.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../../css/global.scss">
+    <link rel="stylesheet" href="css/style.scss">
     <title>Студенты</title>
 </head>
 <body>
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="top__inner">
                 <div class="top__img">
-                    <img src="./assets/img/top-img/top-img.png" alt="">
+                    <img src="assets/img/top-img/top-img.png" alt="">
                 </div>
                 <div class="top__content">
                     <h1 class="top__title title">
@@ -60,7 +60,7 @@
                     <li class="students__item">
                         <div class="students__item-header">
                             <div class="student__info">
-                                <img src="./assets/img/student-img/student-ava.png" alt="">
+                                <img src="assets/img/student-img/student-ava.png" alt="">
                                 <div class="student__name">
                                     <span class="name">Гаак Роман Кто-то</span>
                                     <span class="name__position">Зам старосты</span>
@@ -68,24 +68,24 @@
                             </div>
                             <div class="student__links">
                                 <a href="#">
-                                    <img src="./assets/icon/github-icon.svg" alt="">
+                                    <img src="assets/icon/github-icon.svg" alt="">
                                 </a>
                                 <a href="#">
-                                    <img src="./assets/icon/tg-icon.svg" alt="">
+                                    <img src="assets/icon/tg-icon.svg" alt="">
                                 </a>
                             </div>
                         </div>
                         <ul class="students__benefits-list">
                             <li class="students__benefits-item">
-                                <img src="./assets/icon/vk-icon.svg" alt="">
+                                <img src="assets/icon/vk-icon.svg" alt="">
                                 <span>Гаак Роман</span>
                             </li>
                             <li class="students__benefits-item">
-                                <img src="./assets/icon/skills-icon.svg" alt="">
+                                <img src="assets/icon/skills-icon.svg" alt="">
                                 <span>C#, blender</span>
                             </li>
                             <li class="students__benefits-item">
-                                <img src="./assets/icon/description-icon.svg" alt="">
+                                <img src="assets/icon/description-icon.svg" alt="">
                                 <span>
                                     Основное направление, которое мне больше всего нравится, так это 3д-моделирование, в этом направлении обучаюсь уже более года
                                 </span>
