--- a/src/pages/groups/groups.html
+++ b/src/pages/groups/groups.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Группы</title>
-    <link rel="stylesheet" href="../../css/global.css">
+    <link rel="stylesheet" href="../../css/global.scss">
 </head>
 <body>
   <header class="header">
