--- a/src/pages/teachers/teachers.html
+++ b/src/pages/teachers/teachers.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../css/global.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../../css/global.scss">
+    <link rel="stylesheet" href="css/style.scss">
     <title>Преподаватели</title>
 </head>
 <body>
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="top__inner">
                 <div class="top__img">
-                    <img src="./assets/img/top-img/top-img.png" alt="">
+                    <img src="assets/img/top-img/top-img.png" alt="">
                 </div>
                 <div class="top__content">
                     <h1 class="top__title title">
@@ -60,28 +60,28 @@
                     <li class="teachers__item">
                         <div class="teachers__item-header">
                             <div class="teacher__info">
-                                <img src="./assets/img/teacher-img/teacher-ava.png" alt="">
+                                <img src="assets/img/teacher-img/teacher-ava.png" alt="">
                                 <div class="teacher__name">
                                     <span class="name">Пастух Павел Михайлович</span>
                                     <span class="name__discipline">Физкультура</span>
                                 </div>
                             </div>
                             <div class="teacher__coolness">
-                                <img src="./assets/icon/coolness-icon.svg" alt="">
+                                <img src="assets/icon/coolness-icon.svg" alt="">
                                 <span>1/5</span>
                             </div>
                         </div>
                         <ul class="teacher__benefits-list">
                             <li class="teacher__benefits-item">
-                                <img src="./assets/icon/mail-icon.svg" alt="">
+                                <img src="assets/icon/mail-icon.svg" alt="">
                                 <span>p.pastuh@kasict.ru</span>
                             </li>
                             <li class="teacher__benefits-item">
-                                <img src="./assets/icon/qualification-icon.svg" alt="">
+                                <img src="assets/icon/qualification-icon.svg" alt="">
                                 <span>Высшая квалификация</span>
                             </li>
                             <li class="teacher__benefits-item">
-                                <img src="./assets/icon/document-icon.svg" alt="">
+                                <img src="assets/icon/document-icon.svg" alt="">
                                 <span>
                                     2021г., ООО "Центр инновационного образования и воспитания" повышение квалификации по программе "Навыки оказания первой помощи в образовательных организациях", 36ч.
                                 </span>
@@ -91,28 +91,28 @@
                     <li class="teachers__item">
                         <div class="teachers__item-header">
                             <div class="teacher__info">
-                                <img src="./assets/img/teacher-img/teacher-ava.png" alt="">
+                                <img src="assets/img/teacher-img/teacher-ava.png" alt="">
                                 <div class="teacher__name">
                                     <span class="name">Пастух Павел Михайлович</span>
                                     <span class="name__discipline">Физкультура</span>
                                 </div>
                             </div>
                             <div class="teacher__coolness">
-                                <img src="./assets/icon/coolness-icon.svg" alt="">
+                                <img src="assets/icon/coolness-icon.svg" alt="">
                                 <span>1/5</span>
                             </div>
                         </div>
                         <ul class="teacher__benefits-list">
                             <li class="teacher__benefits-item">
-                                <img src="./assets/icon/mail-icon.svg" alt="">
+                                <img src="assets/icon/mail-icon.svg" alt="">
                                 <span>p.pastuh@kasict.ru</span>
                             </li>
                             <li class="teacher__benefits-item">
-                                <img src="./assets/icon/qualification-icon.svg" alt="">
+                                <img src="assets/icon/qualification-icon.svg" alt="">
                                 <span>Высшая квалификация</span>
                             </li>
                             <li class="teacher__benefits-item">
-                                <img src="./assets/icon/document-icon.svg" alt="">
+                                <img src="assets/icon/document-icon.svg" alt="">
                                 <span>
                                     2021г., ООО "Центр инновационного образования и воспитания" повышение квалификации по программе "Навыки оказания первой помощи в образовательных организациях", 36ч.
                                 </span>
@@ -122,28 +122,28 @@
                     <li class="teachers__item">
                         <div class="teachers__item-header">
                             <div class="teacher__info">
-                                <img src="./assets/img/teacher-img/teacher-ava.png" alt="">
+                                <img src="assets/img/teacher-img/teacher-ava.png" alt="">
                                 <div class="teacher__name">
                                     <span class="name">Пастух Павел Михайлович</span>
                                     <span class="name__discipline">Физкультура</span>
                                 </div>
                             </div>
                             <div class="teacher__coolness">
-                                <img src="./assets/icon/coolness-icon.svg" alt="">
+                                <img src="assets/icon/coolness-icon.svg" alt="">
                                 <span>1/5</span>
                             </div>
                         </div>
                         <ul class="teacher__benefits-list">
                             <li class="teacher__benefits-item">
-                                <img src="./assets/icon/mail-icon.svg" alt="">
+                                <img src="assets/icon/mail-icon.svg" alt="">
                                 <span>p.pastuh@kasict.ru</span>
                             </li>
                             <li class="teacher__benefits-item">
-                                <img src="./assets/icon/qualification-icon.svg" alt="">
+                                <img src="assets/icon/qualification-icon.svg" alt="">
                                 <span>Высшая квалификация</span>
                             </li>
                             <li class="teacher__benefits-item">
-                                <img src="./assets/icon/document-icon.svg" alt="">
+                                <img src="assets/icon/document-icon.svg" alt="">
                                 <span>
                                     2021г., ООО "Центр инновационного образования и воспитания" повышение квалификации по программе "Навыки оказания первой помощи в образовательных организациях", 36ч.
                                 </span>
